@@ -101,6 +101,11 @@ body {
 	padding-left: 0.5em;
 }
 
+#ads {
+	margin: 5px;
+	padding: 5px;
+}
+
 #content {
 	margin: 5px 0 0 12.5em;
 	padding: 5px;
